--- a/SmartPick/addMenu.resx
+++ b/SmartPick/addMenu.resx
@@ -208,101 +208,95 @@
   </data>
   <data name="ButtonClose.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAALMAAAA+CAYAAABgOir1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAGTSURBVHhe7d29ahRhGIZh7ew8A4/AzjJdDiWlh2EriJU2
-        kiKQExCsLa0EQVEJO0rYHzAEtxCyMyP6yuzKgjIHMPtwFVf3fN1dvN13q/q+IIGYiSFmYoiZGGImhpiJ
-        8U/MNz/6apZtrVY9TN7Q6vp7V7+7/2L+umrr/O26js6auv34PUze0Oqj11d1Md9sg97GvF539ezN9egD
-        mLqTl4tafGt3Mc/mbd1/cTE6hKm7+/RjXS67XczD/TE2gkMxNCxmIoiZGGImhpiJIWZiiJkYYiaGmIkh
-        ZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkYYiaGmIkhZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkY
-        YiaGmIkhZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkY+5ibeVv3nn8eHcHU3Xnyoeb7v7Ovunr4ajE6
-        hKk7OmuqWba7mH+1fX263NTxeTM6hql6cDqrd19u6ufm75mxC7rb1j3cHnAoZovNNuSh4X3McOjETAwx
-        E0PMxBAzIfr6A4tTo84QWnmbAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAIYAAAAyCAYAAACZIqPyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFXSURBVHhe7dwxSgNBFIdx7exyA09gZ2mXo1h6DFtBrGIj
+        FkIuIFhbWgmCoiHsKmE3CwZxCyE7M6JPZlcWTf43mK/4dW+q98F0b8NCMGAVYUAiDEiEAYkwIBEGpH9h
+        LD+C5XNnVRWQmLj3+t3bt18J46VyNr6tbe8it82jeyQm7v3wemHTomnjaMOoa2+jmzf5AGnZvyytfHVd
+        GFnhbOdsKgeRlsHJo83mvgsj/jFqCGmKPRAG1hAGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMS
+        YUAiDEiEAYkwIBEGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMSYUDqw8gLZ9unEzmEtGwdP1jR
+        38dYeDu4KuUg0hJPLsV7XG0YXy7Y06yx4Zj7WynbPc/s7nlpn83vV9LF4bnYl7isbNooYg99GMBfhAGJ
+        MCARBiTCgBDsB0n+Nlw7DiyaAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="BtnDespejar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAALMAAAA+CAYAAABgOir1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAGTSURBVHhe7d29ahRhGIZh7ew8A4/AzjJdDiWlh2EriJU2
-        kiKQExCsLa0EQVEJO0rYHzAEtxCyMyP6yuzKgjIHMPtwFVf3fN1dvN13q/q+IIGYiSFmYoiZGGImhpiJ
-        8U/MNz/6apZtrVY9TN7Q6vp7V7+7/2L+umrr/O26js6auv34PUze0Oqj11d1Md9sg97GvF539ezN9egD
-        mLqTl4tafGt3Mc/mbd1/cTE6hKm7+/RjXS67XczD/TE2gkMxNCxmIoiZGGImhpiJIWZiiJkYYiaGmIkh
-        ZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkYYiaGmIkhZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkY
-        YiaGmIkhZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkY+5ibeVv3nn8eHcHU3Xnyoeb7v7Ovunr4ajE6
-        hKk7OmuqWba7mH+1fX263NTxeTM6hql6cDqrd19u6ufm75mxC7rb1j3cHnAoZovNNuSh4X3McOjETAwx
-        E0PMxBAzIfr6A4tTo84QWnmbAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAIYAAAAyCAYAAACZIqPyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFXSURBVHhe7dwxSgNBFIdx7exyA09gZ2mXo1h6DFtBrGIj
+        FkIuIFhbWgmCoiHsKmE3CwZxCyE7M6JPZlcWTf43mK/4dW+q98F0b8NCMGAVYUAiDEiEAYkwIBEGpH9h
+        LD+C5XNnVRWQmLj3+t3bt18J46VyNr6tbe8it82jeyQm7v3wemHTomnjaMOoa2+jmzf5AGnZvyytfHVd
+        GFnhbOdsKgeRlsHJo83mvgsj/jFqCGmKPRAG1hAGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMS
+        YUAiDEiEAYkwIBEGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMSYUDqw8gLZ9unEzmEtGwdP1jR
+        38dYeDu4KuUg0hJPLsV7XG0YXy7Y06yx4Zj7WynbPc/s7nlpn83vV9LF4bnYl7isbNooYg99GMBfhAGJ
+        MCARBiTCgBDsB0n+Nlw7DiyaAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="BtnIngresar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAALMAAAA+CAYAAABgOir1AAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAGTSURBVHhe7d29ahRhGIZh7ew8A4/AzjJdDiWlh2EriJU2
-        kiKQExCsLa0EQVEJO0rYHzAEtxCyMyP6yuzKgjIHMPtwFVf3fN1dvN13q/q+IIGYiSFmYoiZGGImhpiJ
-        8U/MNz/6apZtrVY9TN7Q6vp7V7+7/2L+umrr/O26js6auv34PUze0Oqj11d1Md9sg97GvF539ezN9egD
-        mLqTl4tafGt3Mc/mbd1/cTE6hKm7+/RjXS67XczD/TE2gkMxNCxmIoiZGGImhpiJIWZiiJkYYiaGmIkh
-        ZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkYYiaGmIkhZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkY
-        YiaGmIkhZmKImRhiJoaYiSFmYoiZGGImhpiJIWZiiJkY+5ibeVv3nn8eHcHU3Xnyoeb7v7Ovunr4ajE6
-        hKk7OmuqWba7mH+1fX263NTxeTM6hql6cDqrd19u6ufm75mxC7rb1j3cHnAoZovNNuSh4X3McOjETAwx
-        E0PMxBAzIfr6A4tTo84QWnmbAAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAIYAAAAyCAYAAACZIqPyAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAAFXSURBVHhe7dwxSgNBFIdx7exyA09gZ2mXo1h6DFtBrGIj
+        FkIuIFhbWgmCoiHsKmE3CwZxCyE7M6JPZlcWTf43mK/4dW+q98F0b8NCMGAVYUAiDEiEAYkwIBEGpH9h
+        LD+C5XNnVRWQmLj3+t3bt18J46VyNr6tbe8it82jeyQm7v3wemHTomnjaMOoa2+jmzf5AGnZvyytfHVd
+        GFnhbOdsKgeRlsHJo83mvgsj/jFqCGmKPRAG1hAGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMS
+        YUAiDEiEAYkwIBEGJMKARBiQCAMSYUAiDEiEAYkwIBEGJMKARBiQCAMSYUDqw8gLZ9unEzmEtGwdP1jR
+        38dYeDu4KuUg0hJPLsV7XG0YXy7Y06yx4Zj7WynbPc/s7nlpn83vV9LF4bnYl7isbNooYg99GMBfhAGJ
+        MCARBiTCgBDsB0n+Nlw7DiyaAAAAAElFTkSuQmCC
 </value>
   </data>
   <data name="BtnBuscar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAFsAAAA0CAYAAADllEQWAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAMjSURBVHhe7Zs9ixNRFIa1s7O0s7PzH9jZiD9A7CwtBCsR
-        C8E/IIigIMJWwqJNUJAVFbcTkRVh3ahrdjeJcfLhxhiTSTK5M34c573JZJPMyeZjdm4zp3hgijuTzJOT
-        M/eee+YQeR4JZhDZBhHZBhHZBhHZBhHZBplbttvxyG54lC2pHpaictlLBLjX4L7hQLVd1tEkZpL9V/kf
-        VnUpZ7n0eqtNV56X6fRylk49yNLxe1/o8M10IsC94p4BHKykbbJKLhV3Ff3xHXHuhpkqu1pTlCkourRS
-        pGN3P7NfIskcufWRzqe+0Ua+qwPyn8t7BBNlI5q3i4quv/pOR2+L5GlAOgIyY3V9d3x6YWXjL/Gp0KUz
-        j3LshYXJnFzaovRXhzwn7DUkGxEN0TiJu5gwHaTb9ZwTyuMh2UgdEtHROXE/4weto4M3cDsiu+In+Ksv
-        yuzJwvycSxUoV1Zh2Ujqm/6sA4meO1FYjLWdziB/D2Rj2oKnKXeCsDhnH+Yp349uLRtzw6y/YJEpXjxs
-        +RkDmUPLxrITqyFuoBCdO29q1G72I7tac+niU4sdKEQnSCVaNgorqHVwA4XoYBq4Y/Vl40AWMfGBZ2Gh
-        1M/ZOJCHY7ygRKtl44AbIBwcItsgItsgItsgItsgItsgItsgItsgItsgA9nofZBNg3gZyEZtBMUSbpAQ
-        HQQyAlrLRtUPXT7cQCE66KRC65qWXakquvBY6tlxgfI1AlrL7tgeLa39ZAcK0bn2skL1ej+NoLchX1Ts
-        QCE6wQ67lg2wbYPtG26wsDjYlMEEBI4HsmEevwB3grA4qfUGddtjfSNAovtgGY7qkGz0NmzknUQ1uMcF
-        thnfZTv0u7vnd0Q2QDp5u92WFWVEnnxokt0c7dMOyQa27Wrh8qbB/CCiIfpHfS99BLCyASIcTd2yspwd
-        5GikjvGIDpgoGyCHY+WzutmSvpJ9wDNu+f0v/TAcztHj7Cs7AK/j4ULopr+xuqujPek5HQ4uPyvpt+dQ
-        93BavLthZpIdgF+t1ehFO6pYKBsmFTio13uByLnimEu2EA2RbRCRbRCRbRCRbQyP/gOl8r1tg+ezyAAA
-        AABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAEQAAAAqCAYAAAAK7f2YAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALqSURBVGhD7Zk9ixNBGMe1s7O0s7PzG9jZiB9A7CwtBCsR
+        C8EvIIigIMJVwqFNUJATFa8TkTuE86KeyV2yxrx5Ma7JZrNvvjw3/0l2k8w+8e5EIZnZ4gdXzOZmfvvM
+        M88ze4CiiDJGZEIUMiEKmRCFTIhCJkRh30LCfkROJ6JSPRhQDajRiGYGzCeeG+YZuCG7jmnsScivQPyz
+        Vkjlakgviy5detqgk4slOnGvREfvfKSD1/MzA+aDeQHMcynvULUeUm07oJ9iHdz6xtlVSKsdUKES0IWl
+        Gh25/YGdxKxz6MY7Opv7TOuWL1/s75BfK5gqBFGxWQvo6osvdPjmfIpQgRi82ELVF+vjtxIrBKH1vuLT
+        qQdl9ofnneMLRcp/8ijy0mtPCUFkQAYe4n5MF7D918peKq+khGCb6BoZKsfuFsTL92QQxOufENIUCefy
+        swb7sK6cyVWo3AjSQpBkNsRpgsTDPagzK1v9JJ8kQnAcIQNzD+jO6fsWWcMokUJwLpdE0aXL8fo3FMXu
+        wC6RQlDeoqLjBprCrVdtcrvDCGm1Qzr/uMoONIV420ghaITQm3ADTQFH8JZoDKUQ/KF7IbYbyJ8V0QRK
+        Iehi57Vx+5fg+iCJEIQMN8gUUH/hmiDJIbg/4AaaAu5RcLkkhTRbAZ17aPYpg0MFgSGF9J2IFla+sQNN
+        4crzJtn2cMug27NEl8sNNIW4n5FCAIoSFCfcYN1ByYGDBR4SIbADS9wDupNb65DvKt0uMDFKxqMjJQTd
+        3rrlzdynhf8FqtPVUp9++CMHE0IAts7rTdeIi6JHb7vkdCdv31NCgOOEUoqu5TwiAzK+2qOtEsMKAYgU
+        XNXrVsEiZ2CbqJERM1UIQE5B9ba80Zv7bhh5cfHNd5lAx3OGyh+FxOADN34I3zGuLW/LqJmHHIN5XnxS
+        l9+j0ad4PX594+xJSAzM9jqDqEFnqH55nzUwT9sevFBuPRz7EmICmRCFTIhCJkQhEzJBRDvhpWffin95
+        /AAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="btnGenerar.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGgAAAA0CAYAAABmUH0tAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAMpSURBVHhe7Zs9ixNRFIa1s7O0s7PzH9jZiD9A7CwtBCsR
-        C8E/IIigIMJWwqJNUJAVFbcTkRVh3ahrdjeJMV9ujDHfmRk/jvPeZLJJ5kQT2Mzc4i0emOLOJJxnzj13
-        7scB8Twh9kJBlkNBlkNBlkNBlkNBljO3ILfjSbPuSbro9Mk7Uip5ZAqITxArxM1pu2pcpzGToN+O/2MV
-        VzJ5V15uteXS05KcXE7LiXtpOXrnkxy8niRTQHwQJ4C4rSSbki+6Uth15JcfVy3eo/xXUKXqSCrnyIWV
-        ghy5/VH9E2Q+Dt14L2cTX2Qj2zMv/h9Xjz2YKghZs11w5OqLr3L4JsUsAojCi5/K9/x4612fKgip9yHX
-        k1MPMuqDyf5yfGlLkp+74nXDLkKCkDmQg5u0h5HFgPKxnumG6lJIELo1Zk48HLub8pOja5Ik8DEmqOwX
-        rMvPSurNJBrOJHKSKTlhQShSm/5oDYVLu5FEx9pOZ1iPhoIw3MOIQruBRMvp+1nJDrLICMI4PO1/hHI4
-        bQ9bfm+GXs0IwvQDvnC1hiQebr2qSrsxyKBK1ZXzj/NqQxIPQTdnBGEiD3NrWkMSDxhy7+QHgnDBD1O7
-        wHggVxzUIFxwgGAfWK4wgnChNSDxQkGWQ0GWQ0GWQ0GWQ0GWQ0GWQ0GWQ0GWMxSEfVpcqLOPoSDMxWFy
-        TmtE4gEJg8QxgjCbjZ2PWkMSD9iRim3DRlC54si5h1wPsgks/yBxjKBO05Olte9qQxIPV56XpVYbdHHY
-        h5UtOGpDEg/Bzh4jCGB5FcusWmMSLVg8xcANXoaCYAvWtBtItCTW69JrT+yLA8yi+BnNnpAg7MPayHZ5
-        KCsmsO3gTbojP3t7TsYEAXR1r7fbnFmIgUfvGtJsjJ8TCgkCzaZrJPFEXTQgcyDnW22vawtQBQFkEg4V
-        cYZhsaDmoFubzJyAqYIAahK+Zlc3W9w3t8+gzi+//WEGBKM1Z5J/CgrA0Xs8CCfArq3umqxijZofxO3i
-        k6I5KY95tm5Lj/coMwkKgOlWvZ9VmGnFdDiZHcStVuu/8Fp8NeYSRKKHgiyHgiyHgiyHgqzGk7/WkgQ/
-        P2AjYAAAAABJRU5ErkJggg==
+        iVBORw0KGgoAAAANSUhEUgAAAE4AAAAqCAYAAAAdz21RAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALwSURBVGhD7ZrPitNQFId1586lO3fufAN3bsQHEHcuXQiu
+        RFwIvoAggoIIsxIG3RQFGVFxdiIyIoxTdWxn2lrTpk6tsU3b9Cb+OeZ307RNcqpt0EWbs/hgFjeZ3K/n
+        nnvOTfaR55EwPyIuJSIuJSIuJSIuJSIuJXOLc/se2W2PSnUVYCgyTW/hwHOHc8B8VM9l5zuNmcT9VP4/
+        a7pUNlx6XuzRhccmHV8t0bE7JTp86wPtv5pfOPDceH6A+azlbTLqLtX2FP3w58t5mOSv4potRYWqonNr
+        NTp08z37EMvCgWtv6XTuE21VBjpQfrm8EzBVHKJsp6bo8rPPdPD6cguLA4EIlIIx8D3wS5gVh1B9Vx3Q
+        iXtl9sZZ4ehKkfIfHfKcpKOEOEQapOEi7mZZA+lps+wk8l5CHJZn1iMtzpHbBT+YHB1UoaeIuIafEC8+
+        MdmLs86pXJXKpkqKQxLc9ndPJEbuQiFPG7v9Ub4bicP2i52Eu0AIOHm3QpVh1GlxqFdKfnGbtbIjDUV/
+        VWJ1anFoN1A5cwOFKDdetKjXGUZcs+XS2YcGO1CIEi5XLQ6NLnpPbqAQBaXJrjEUhz+k4J0N7APV+jDH
+        4dRj2Rv4fwmOpUYRhxDkBglRUOfi+GmU43AuxQ0UouAcD4egWlyjqejMfdlVZwGbKAJNi+vbHq1sfGUH
+        ClEuPW2QZQ2XKrr+Sk2xA4UoYb+qxQEUdSjuuMFCAEo2bKTwNRIHi7DJXSAE5DbbNOjFTkeARN10JqMt
+        IQ5d/1bFWdhXfv8LdAuvSn36Phi7iogDWLIvd3pyoDnBgzcdsjvRt10JccC2XS0v620YIg3SvljjJRrC
+        igOIPLway2pHgZyG5RmPtJCp4gByHqrk9e1uZk5PkN9XX3/TG8FkTovzR3Eh+NAGN8L7xSvrezoKlykH
+        Yj7nH9X1dzHoQ50u72GSmcSF4BfotoMoxAlB/AugRQXzsawgQLh5c8wlThgj4lIi4lIi4lIi4lLh0W92
+        nhQGSWL0agAAAABJRU5ErkJggg==
 </value>
   </data>
   <data name="BtnOkload.BackgroundImage" type="System.Drawing.Bitmap, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
     <value>
-        iVBORw0KGgoAAAANSUhEUgAAAGsAAAAyCAYAAABbPiUzAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
-        YQUAAAAJcEhZcwAAEnQAABJ0Ad5mH3gAAAMlSURBVHhe7Zs9axRRFIa1s7O0s7PzH9jZiD9A7CwtBCsR
-        C8E/IIigIEKqQNBmUZCIiulEJCLERI352F3X/TLruu73zowfx3nv7mw2mRPdRDZ3LrzFA1vcmYTzcO65
-        c+69ByQIhLgBZTkEZTkEZTkEZTkEZTnErmX5nUCa9UDSRa9P3pNSKSBjgFhFcUMMvbavxngnxpL1ywv/
-        WMWXTN6XF6ttufSkJCdn0nJiOi1H73yUg9eXyBggVogZQAxnl5qSL/pS2PDkZxhjLfaj/FNWperJSs6T
-        C7MFOXL7g/pPkL1z6MY7OZv6LIvZnkmI377uAewoC9m0VvDk6vMvcvgmJU0aSENCrOR7Yez16VGVhZR8
-        n+vJqfsZ9cVkchyfWpWlT10JunEvMVnIKIjCQ9rLyORBuVnIdGN1LCYLUx8zyj7H7q6ESdM1yRO52SKr
-        HBa4y09L6sNk/zmTykmm5MVloagth6s+FDrtQWKH+fXOsH4NZWHZiNWI9gCxx+l7WckOssvIwto+HX7w
-        comeTFbDGQ8zn5GFtge+prWBxD63Xlal3RhkVqXqy/lHeXUgsU80FRpZaCyi16cNJPbBMn49P5CFH/wI
-        Ti5YS+SKg5qFH1xcJBtssRhZ+KENIMmBshyCshyCshyCshyCshyCshxiKAsnbLg1kmyGstDBQEtDG0Ts
-        g0RCQhlZ6A3iLJs2kNgH5w1xQNTIKlc8OfeAXfekgiY7EsrI6jQDmZr/pg4k9rnyrCy12mAaxAmabMFT
-        BxL7ROcwjCyAzS1scmmDiT2wdYUFIBwNZcEcDGoPEHukFurSa2873QSYXcliNKtisnCCZjHb5TWeBIDN
-        4NfpjvzobfrZIgtgOny11mZHwzIP3zak2dh6myQmCzSbvhHG+1j7DzIKor7WNqe/CFUWQIbh6gk7G/sH
-        ahSmvu0ZFbGjLIAahi/nueUWTz9NEKwRZt58N4uJ0Rq1nb/KisClb7wId4auzW2YbGNN+z8Qw4uPi+aO
-        Nvp+3ZYe+1HGkhUB6616P9vQBUbbnuwNxLBW6yeCFmuNXckidqEsh6Ash6Ash6AsZwjkD5mJrp7tKd4R
-        AAAAAElFTkSuQmCC
+        iVBORw0KGgoAAAANSUhEUgAAAFAAAAApCAYAAACiPK6kAAAAAXNSR0IArs4c6QAAAARnQU1BAACxjwv8
+        YQUAAAAJcEhZcwAADsMAAA7DAcdvqGQAAALnSURBVGhD7Zq/ixNBFMe1s7O0s7PzP7CzEf8AsbO0EKxE
+        LAT/AUEEBRGuEg5tgoKcqHidiJwI50U9k7vdNW5+eDGuySbZzK4/nvudZJNs9sVcbrHI7Ss+cMXM3s4n
+        b968mdkDFAQk7B0RmBIRmBIRmBIRmBIRmJK5BfrdgNxmQEZF9bEVVavBwoL3j8aCcamOz457GrsS+FuF
+        /6zuk2n79LLYoUtPq3Ry2aAT9ww6eucTHbyeX1jw/hgHwLhW8i7ZFZ/KO4p+hePmfIwzU2C9oahQUnRh
+        pUxHbn9kX2K/cejGezqb+0IbVk8Hzh+fdwOmCkTUbZUVXX3xlQ7fzIa4SSASgVOwe6EPfmqzAhG6H0o9
+        OvXAZB+cNY4vFSn/2aPAS7pKCETkQR46cQ/LKkhf66aXyIsJgZi2Enk8x+4WwuDydJBFvmICa2HCvPys
+        ynYW+pzJlcisqqRAJMnNcLVF4uQ6CiPWtrvDfDgUiOUaKw7XQYhz+r5F1iAKtUDUOUZYJGe1XNkLxXC2
+        YtZqgdi+oALnGgo8t141qNMaRGC94dP5xzbbUOCJprEWiI009rZcQ4EHJc22PRBoln0pnOcE60WpMsiB
+        +ANGuYYCD8o9nNoMpzCOc7iGAg+OwXCWqAXW6orOPZRFZB6wZiDwtMCuG9DS2ne2ocBz5XmNHGcwhbE5
+        tsqKbSjwRNs5LRCgpkFtwzUW4qBiQQkDb0OBsAmrXAchTm69Sb3OxGECkCiczXj0JQRic7xheQt/0/a/
+        QPH8xujSz97IWUwgwFR+vdWRc0GGR+9a5Lbil0sJgcB1fS0xK9eYs0DkQd43ZzR1I1iBAJGIm6is71CQ
+        8zBtJyMvYqpAgJyIant1s525wwasA8tvf+gFYzznTfJPgRH4HgYPwrXetdUdHZX7MUdiXBefVPTnK9jn
+        em3exzi7EhiBX6Ld7EclTiK4j3UWGYzLcfoBw42fYy6BQhIRmBIRmBIRmBIRmIqA/gK2EkFmQ6joEQAA
+        AABJRU5ErkJggg==
 </value>
   </data>
   <data name="$this.Icon" type="System.Drawing.Icon, System.Drawing" mimetype="application/x-microsoft.net.object.bytearray.base64">
